# simulation_framework

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: report-MCANEAR.md
docs/presentation/: bibliography.bib  presentation.tex
docs/report/: bibliography.bib  report-MCANEAR.tex
example/: analyze_timings.py  greenland.py  ridge_example.py  ridge_vs_ols.py
example/mmcanear_timings_archive/: gpu_timings.csv  timings.csv
src/: constants.py  decorators.py  dgp.py  evaluators.py  methods.py  plotters.py  runners.py  utils.py
tests/: conftest.py  test_decorators.py  test_dgp.py  test_evaluator.py  test_example.py  test_happy_path.py  test_methods.py  test_runners.py  test_utils.py
