[project]
name = "simulation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "jax>=0.8.0",
    "jaxtyping>=0.3.3",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]
testing = [
    "pygments>=2.19.2",
    "pytest>=9.0.1",
]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
