[project]
name = "simulation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "pygments>=2.19.2",
    "pytest>=9.0.1",
]
cuda = [
    "jax[cuda]>=0.8.1",
]
mac = []
